--- a/src/components/ui/Tag/index.css
+++ b/src/components/ui/Tag/index.css
@@ -1,5 +1,5 @@
 .Tag {
-  transform: scale(0.9);
+  transform: scale(0.95);
   display: inline-flex;
   justify-content: center;
   line-height: 22px;
